# StauroX

./: .env.example  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: error.rs  lib.rs  main.rs
src/api/: mod.rs  rest.rs  websocket.rs
src/config/: mod.rs
src/monitor/: detector.rs  health.rs  mod.rs
src/parsers/: bridge_types.rs  mod.rs  wormhole.rs
src/rpc/: client.rs  consensus.rs  mod.rs
src/service/: mod.rs
src/types/: mod.rs  network.rs  verification.rs
src/verification/: engine.rs  finality.rs  mod.rs  risk.rs
staurox-client/: Cargo.toml  README.md
staurox-client/src/: main.rs
staurox-program/: Anchor.toml  Cargo.toml
staurox-program/programs/staurox-program/: Cargo.toml
staurox-program/programs/staurox-program/src/: lib.rs  state.rs
staurox-program/tests/: staurox-program.ts
tools/: analyze_wormhole.rs
