[package]
name = "staurox"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# Solana
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
anchor-lang = "0.29"
anchor-client = "0.29"

# HTTP & API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
config = "0.14"
dotenv = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha2 = "0.10"
bs58 = "0.5"

[dev-dependencies]
mockito = "1.2"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1